force-app/main/default/objects/Employeeassessment__c/Employeeassessment__c.object-meta.xml
<CustomObject>
    <label>Employee Assessment</label>
    <nameField>
        <displayFormat>EA-{00000000}</displayFormat>
        <label>Employee Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Assessment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>