force-app/main/default/objects/Employeeassessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Assessment (Assessor)</relationshipLabel>
    <relationshipName>Employee_Assessment1</relationshipName>
    <type>Lookup</type>
</CustomField>