force-app/main/default/objects/Employeeassessment__c/fields/Assessors__c.field-meta.xml
<CustomField>
    <fullName>Assessors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>