force-app/main/default/objects/Employeeassessment__c/fields/Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Characteristic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Characteristic</label>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Employee Assessment</relationshipLabel>
    <relationshipName>Employee_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>