force-app/main/default/objects/Employeeassessment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>