force-app/main/default/objects/Employeeassessment__c/fields/Employee_Process__c.field-meta.xml
<CustomField>
    <fullName>Employee_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Process</label>
    <referenceTo>Employee_Process__c</referenceTo>
    <relationshipLabel>Employee Assessment</relationshipLabel>
    <relationshipName>Employee_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>