force-app/main/default/objects/Employeeassessment__c/fields/Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Training_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Program</label>
    <referenceTo>Training_Program__c</referenceTo>
    <relationshipLabel>Employee Assessment</relationshipLabel>
    <relationshipName>Employee_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>