force-app/main/default/objects/Employeeassessment__c/recordTypes/Employee_Process.recordType-meta.xml
<RecordType>
    <fullName>Employee_Process</fullName>
    <active>true</active>
    <label>Employee Process</label>
</RecordType>