force-app/main/default/objects/Employeeassessment__c/recordTypes/TrainingProgram.recordType-meta.xml
<RecordType>
    <fullName>TrainingProgram</fullName>
    <active>true</active>
    <label>Training Program</label>
</RecordType>